--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,11 @@
 	    <version>1.9.5</version>
 	    <scope>test</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.11.1</version>
+	</dependency>
   </dependencies>
 </project>
