--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,11 @@
 	    <artifactId>mockito-all</artifactId>
 	    <version>1.9.5</version>
 	    <scope>test</scope>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	</dependency>	
 	<dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-core</artifactId>
-	    <version>2.11.1</version>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
 	</dependency>
   </dependencies>
 </project>
